// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Main with MainChild with no max width 1`] = `
<main
  class="sc-bdvvaa lyEiN"
>
  <div
    class="sc-gsDJrp jxSnOT"
  >
    foo
  </div>
</main>
`;

exports[`renders Main with all non-default Main options and common MainChild options 1`] = `
<main
  class="sc-bdvvaa hwUMQP"
>
  <div
    class="sc-gsDJrp gTPMtF"
  >
    foo
  </div>
</main>
`;

exports[`renders Main with defaults 1`] = `
<main
  class="sc-bdvvaa lyEiN"
>
  <div
    class="sc-gsDJrp hkJJbd"
  >
    foo
  </div>
</main>
`;
